BREAKING CHANGE: remove date lenient parsing option